# build-your-own-dns-server

./: .gitignore  README.md  course-definition.yml  starter-repository-definitions.yml
compiled_starters/c/: README.md
compiled_starters/cpp/: README.md
compiled_starters/csharp/: README.md  codecrafters-dns-server.csproj  your_program.sh
compiled_starters/elixir/: README.md  mix.exs
compiled_starters/go/: README.md  go.mod  your_program.sh
compiled_starters/java/: README.md  codecrafters.yml  pom.xml  your_program.sh
compiled_starters/javascript/: README.md
compiled_starters/kotlin/: README.md  pom.xml  settings.gradle.kts  your_program.sh
compiled_starters/php/: README.md
compiled_starters/python/: README.md
compiled_starters/ruby/: README.md
compiled_starters/rust/: Cargo.toml  README.md  your_program.sh
compiled_starters/typescript/: README.md  package.json
dockerfiles/: bun-1.1.Dockerfile  cpp-23.Dockerfile  deno-1.42.Dockerfile  dotnet-6.0.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  java-21.Dockerfile  kotlin-2.0.Dockerfile  rust-1.70.Dockerfile  rust-1.76.Dockerfile  rust-1.77.Dockerfile
stage_descriptions/: base-01-ux2.md  base-02-tz1.md  base-03-bf2.md  base-04-xm2.md  base-05-uc8.md  base-06-hd8.md  base-07-yc9.md  base-08-gt1.md
starter_templates/: codecrafters.yml
starter_templates/rust/: Cargo.toml
starter_templates/rust/code/: Cargo.toml
starter_templates/rust/code/.codecrafters/: compile.sh  run.sh
starter_templates/rust/code/src/: main.rs
starter_templates/rust/src/: main.rs
(+176 files in other folders)
